io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/illegaltypeforstoragefield1/NonStorage.java
package io.hotmoka.tests.errors.illegaltypeforstoragefield1;

public class NonStorage {
}